--- a/settings.org
+++ b/settings.org
@@ -280,11 +280,31 @@ variable before getting started.
 
 ** Keyboard shortcuts
 #+BEGIN_SRC emacs-lisp
-  ;; Shortcuts
-  (setq mu4e-maildir-shortcuts
-        '(("/Thoughtspot/INBOX" . ?t)
-          ("/UW/INBOX" . ?u)
-          ))
+    ;; Shortcuts
+    (setq mu4e-maildir-shortcuts
+          '(("/Thoughtspot/INBOX" . ?t)
+            ("/UW/INBOX" . ?u)))
+
+    ;; Bookmarks (in addition to defaults)
+    (add-to-list
+     'mu4e-bookmarks
+     '("maildir:/Thoughtspot/INBOX OR maildir:/UW/INBOX" "All Inboxes" ?a))
+#+END_SRC
+
+** Email signature
+I like to disable message signatures by default, but you [[http://www.djcbsoftware.nl/code/mu/mu4e/Message-signatures.html][can still
+insert the signature manually]] with =C-c C-w=.
+#+BEGIN_SRC emacs-lisp
+  (setq mu4e-compose-signature-auto-include nil)
+
+  (setq mu4e-compose-signature
+"
+-----------------------------------------------------
+Peter Schmiedeskamp
+PhD Student - Urban Planning
+University of Washington
+pschmied@uw.edu | http://www.thoughtspot.net
+")
 #+END_SRC
 
 ** Aesthetic / display options
