--- a/settings.org
+++ b/settings.org
@@ -352,45 +352,48 @@ pschmied@uw.edu | http://www.thoughtspot.net
 ** Configure mail sending
 
 #+BEGIN_SRC emacs-lisp
-;; sending mail
-(setq message-send-mail-function 'message-send-mail-with-sendmail
-      sendmail-program "/usr/local/bin/msmtp"
-      user-full-name "Peter Schmiedeskamp")
+  ;; sending mail
+  (setq message-send-mail-function 'message-send-mail-with-sendmail
+        sendmail-program "/usr/local/bin/msmtp"
+        user-full-name "Peter Schmiedeskamp")
 
-;; Borrowed from http://ionrock.org/emacs-email-and-mu.html
-;; Choose account label to feed msmtp -a option based on From header
-;; in Message buffer; This function must be added to
-;; message-send-mail-hook for on-the-fly change of From address before
-;; sending message since message-send-mail-hook is processed right
-;; before sending message.
-(defun choose-msmtp-account ()
-  (if (message-mail-p)
-      (save-excursion
-        (let*
-            ((from (save-restriction
-                     (message-narrow-to-headers)
-                     (message-fetch-field "from")))
-             (account
-              (cond
-               ((string-match "peter@thoughtspot.net" from) "Thoughtspot")
-               ((string-match "pschmied@uw.edu" from) "UW"))))
-          (setq message-sendmail-extra-arguments (list '"-a" account))))))
-(setq message-sendmail-envelope-from 'header)
-(add-hook 'message-send-mail-hook 'choose-msmtp-account)
-(add-to-list 'mu4e-bookmarks
-             '("maildir:/Thoughtspot/inbox OR maildir:/UW/inbox flag:unread" "Today's news" ?z))
+  ;; Borrowed from http://ionrock.org/emacs-email-and-mu.html
+  ;; Choose account label to feed msmtp -a option based on From header
+  ;; in Message buffer; This function must be added to
+  ;; message-send-mail-hook for on-the-fly change of From address before
+  ;; sending message since message-send-mail-hook is processed right
+  ;; before sending message.
+  (defun choose-msmtp-account ()
+    (if (message-mail-p)
+        (save-excursion
+          (let*
+              ((from (save-restriction
+                       (message-narrow-to-headers)
+                       (message-fetch-field "from")))
+               (account
+                (cond
+                 ((string-match "peter@thoughtspot.net" from) "Thoughtspot")
+                 ((string-match "pschmied@uw.edu" from) "UW")
+                 ((string-match "pschmied@u.washington.edu" from) "UW"))))
+            (setq message-sendmail-extra-arguments (list '"-a" account))))))
+  (setq message-sendmail-envelope-from 'header)
+  (add-hook 'message-send-mail-hook 'choose-msmtp-account)
+  (add-to-list 'mu4e-bookmarks
+               '("maildir:/Thoughtspot/inbox OR maildir:/UW/inbox flag:unread" "Today's news" ?z))
 
-;; Reply to mail using the account that original message was sent to
-(add-hook 'mu4e-compose-pre-hook
-          (defun my-set-from-address ()
-            "Set the From address based on the To address of the original."
-            (let ((msg mu4e-compose-parent-message)) ;; msg is shorter...
-              (if msg
-                  (setq user-mail-address
-                        (cond
-                         ((mu4e-message-contact-field-matches msg :to "peter@thoughtspot.net")
-                          "peter@thoughtspot.net")
-                         ((mu4e-message-contact-field-matches msg :to "pschmied@uw.edu")
-                          "pschmied@uw.edu")
-                         (t "peter@thoughtspot.net")))))))
+  ;; Reply to mail using the account that original message was sent to
+  (add-hook 'mu4e-compose-pre-hook
+            (defun my-set-from-address ()
+              "Set the From address based on the To address of the original."
+              (let ((msg mu4e-compose-parent-message)) ;; msg is shorter...
+                (if msg
+                    (setq user-mail-address
+                          (cond
+                           ((mu4e-message-contact-field-matches msg :to "peter@thoughtspot.net")
+                            "peter@thoughtspot.net")
+                           ((mu4e-message-contact-field-matches msg :to "pschmied@uw.edu")
+                            "pschmied@uw.edu")
+                           ((mu4e-message-contact-field-matches msg :to "pschmied@u.washington.edu")
+                            "pschmied@uw.edu")
+                           (t "peter@thoughtspot.net")))))))
 #+END_SRC
