--- a/settings.org
+++ b/settings.org
@@ -41,6 +41,7 @@ Installation of these configuration files is simple. If you're not me,
                         smex
                         paredit
                         ess
+                        o-blog
                         graphviz-dot-mode
                         auctex-latexmk
                         tangotango-theme
@@ -57,7 +58,6 @@ Installation of these configuration files is simple. If you're not me,
                         pandoc-mode
                         ox-pandoc
                         polymode
-                        org-page
                         outshine
                         magit
                         sx)
@@ -383,175 +383,175 @@ Configure Haskell.
 (add-hook 'TeX-mode-hook '(lambda () (setq TeX-command-default "LaTeXmk")))
 (add-hook 'LaTeX-mode-hook '(lambda () (setq compile-command "latexmk -pdf")))
 #+END_SRC
-* Email 
-This one was a bit involved to set up. In this repository is a
-directory, =mu4e= that contains corresponding configuration files for
-offlineimap and msmtp. These two programs do the heavy lifting for the
-mu4e package. I've added a makefile to that directory which will copy
-the dot-files into the right place (clearly this repository is
-destined to be phased out in favor of a more comprehensive dot-files
-setup).
+# * Email 
+# This one was a bit involved to set up. In this repository is a
+# directory, =mu4e= that contains corresponding configuration files for
+# offlineimap and msmtp. These two programs do the heavy lifting for the
+# mu4e package. I've added a makefile to that directory which will copy
+# the dot-files into the right place (clearly this repository is
+# destined to be phased out in favor of a more comprehensive dot-files
+# setup).
 
-In addition, mu must be built with ~--with-emacs~ option
-in homebrew. Sometimes this build tries to build mu4e against the
-emacs bundled with OSX. That's bad. Try setting the emacs environment
-variable before getting started.
+# In addition, mu must be built with ~--with-emacs~ option
+# in homebrew. Sometimes this build tries to build mu4e against the
+# emacs bundled with OSX. That's bad. Try setting the emacs environment
+# variable before getting started.
 
-** Mailbox locations and message filing behaviors
-#+BEGIN_SRC emacs-lisp
-  (require 'mu4e)
-  ;; don't save message to Sent Messages, Gmail/IMAP takes care of this
-  (setq mu4e-sent-messages-behavior 'delete)
-  ;; Gmail also has its own strategy for trash
-  (setq mu4e-trash-messages-behavior 'delete)
-  (setq mu4e-get-mail-command "/usr/local/bin/offlineimap")
-  (setq mu4e-mu-binary "/usr/local/bin/mu")
-  (setq mu4e-maildir "~/Mail") ;; top-level Maildir
-  (setq mu4e-sent-folder "/LocalOnly/Sent") ; These are not really important
-  (setq mu4e-drafts-folder "/LocalOnly/Drafts") ; as gmail does its own accounting
-  (setq mu4e-trash-folder "/LocalOnly/Trash") ; these just shut up mu4e
-  (setq mu4e-user-mail-address-list (list "peter@thoughtspot.net" "pschmied@uw.edu"))
+# ** Mailbox locations and message filing behaviors
+# #+BEGIN_SRC emacs-lisp
+#   (require 'mu4e)
+#   ;; don't save message to Sent Messages, Gmail/IMAP takes care of this
+#   (setq mu4e-sent-messages-behavior 'delete)
+#   ;; Gmail also has its own strategy for trash
+#   (setq mu4e-trash-messages-behavior 'delete)
+#   (setq mu4e-get-mail-command "/usr/local/bin/offlineimap")
+#   (setq mu4e-mu-binary "/usr/local/bin/mu")
+#   (setq mu4e-maildir "~/Mail") ;; top-level Maildir
+#   (setq mu4e-sent-folder "/LocalOnly/Sent") ; These are not really important
+#   (setq mu4e-drafts-folder "/LocalOnly/Drafts") ; as gmail does its own accounting
+#   (setq mu4e-trash-folder "/LocalOnly/Trash") ; these just shut up mu4e
+#   (setq mu4e-user-mail-address-list (list "peter@thoughtspot.net" "pschmied@uw.edu"))
 
-  ;; Default accunt to send from
-  (setq user-mail-address "peter@thoughtspot.net")
-  ;; Don't think this is needed for most Gmail setups, as GMail archives
-  ;; things by default, but this sets up smart refile locations if such
-  ;; a thing becomes necessary.
-  ;; (setq mu4e-refile-folder
-  ;;       (lambda (msg)
-  ;;         (cond
-  ;;          ;; messages sent directly to me go to /archive
-  ;;          ;; also `mu4e-user-mail-address-regexp' can be used
-  ;;          ((mu4e-message-contact-field-matches msg :to "marius@gitorious")
-  ;;           "/Gitorious/archive")
-  ;;          ((mu4e-message-contact-field-matches msg :to "marius.mathiesen@gmail.com")
-  ;;           "/Gmail/archive")
-  ;;          ((mu4e-message-contact-field-matches msg :to "zmalltalker@zmalltalker.com")
-  ;;           "/Gmail/archive")
-  ;;          ((mu4e-message-contact-field-matches msg :to "marius@shortcut.no")
-  ;;           "/Shortcut/archive")
-  ;;          ;; everything else goes to /archive
-  ;;          ;; important to have a catch-all at the end!
-  ;;          (t  "/Gmail/archive"))))
-#+END_SRC
+#   ;; Default accunt to send from
+#   (setq user-mail-address "peter@thoughtspot.net")
+#   ;; Don't think this is needed for most Gmail setups, as GMail archives
+#   ;; things by default, but this sets up smart refile locations if such
+#   ;; a thing becomes necessary.
+#   ;; (setq mu4e-refile-folder
+#   ;;       (lambda (msg)
+#   ;;         (cond
+#   ;;          ;; messages sent directly to me go to /archive
+#   ;;          ;; also `mu4e-user-mail-address-regexp' can be used
+#   ;;          ((mu4e-message-contact-field-matches msg :to "marius@gitorious")
+#   ;;           "/Gitorious/archive")
+#   ;;          ((mu4e-message-contact-field-matches msg :to "marius.mathiesen@gmail.com")
+#   ;;           "/Gmail/archive")
+#   ;;          ((mu4e-message-contact-field-matches msg :to "zmalltalker@zmalltalker.com")
+#   ;;           "/Gmail/archive")
+#   ;;          ((mu4e-message-contact-field-matches msg :to "marius@shortcut.no")
+#   ;;           "/Shortcut/archive")
+#   ;;          ;; everything else goes to /archive
+#   ;;          ;; important to have a catch-all at the end!
+#   ;;          (t  "/Gmail/archive"))))
+# #+END_SRC
 
-** Keyboard shortcuts
-#+BEGIN_SRC emacs-lisp
-  ;; Shortcuts
-  (setq mu4e-maildir-shortcuts
-        '(("/Thoughtspot/INBOX" . ?t)
-          ("/UW/INBOX" . ?u)))
+# ** Keyboard shortcuts
+# #+BEGIN_SRC emacs-lisp
+#   ;; Shortcuts
+#   (setq mu4e-maildir-shortcuts
+#         '(("/Thoughtspot/INBOX" . ?t)
+#           ("/UW/INBOX" . ?u)))
 
-  ;; Bookmarks (in addition to defaults)
-  (add-to-list
-   'mu4e-bookmarks
-   '("maildir:/Thoughtspot/INBOX OR maildir:/UW/INBOX" "All Inboxes" ?a))
+#   ;; Bookmarks (in addition to defaults)
+#   (add-to-list
+#    'mu4e-bookmarks
+#    '("maildir:/Thoughtspot/INBOX OR maildir:/UW/INBOX" "All Inboxes" ?a))
 
-  (add-to-list
-   'mu4e-bookmarks
-   '("date:today..now AND NOT flag:trashed" "Today's messages"       ?t))
-#+END_SRC
+#   (add-to-list
+#    'mu4e-bookmarks
+#    '("date:today..now AND NOT flag:trashed" "Today's messages"       ?t))
+# #+END_SRC
 
-** Email signature
-I like to disable message signatures by default, but you [[http://www.djcbsoftware.nl/code/mu/mu4e/Message-signatures.html][can still
-insert the signature manually]] with =C-c C-w=.
-#+BEGIN_SRC emacs-lisp
-  (setq mu4e-compose-signature-auto-include nil)
+# ** Email signature
+# I like to disable message signatures by default, but you [[http://www.djcbsoftware.nl/code/mu/mu4e/Message-signatures.html][can still
+# insert the signature manually]] with =C-c C-w=.
+# #+BEGIN_SRC emacs-lisp
+#   (setq mu4e-compose-signature-auto-include nil)
 
-  (setq mu4e-compose-signature
-"
-Peter Schmiedeskamp
-PhD Student - Urban Planning
-University of Washington
-pschmied@uw.edu | http://www.thoughtspot.net
-")
-#+END_SRC
+#   (setq mu4e-compose-signature
+# "
+# Peter Schmiedeskamp
+# PhD Student - Urban Planning
+# University of Washington
+# pschmied@uw.edu | http://www.thoughtspot.net
+# ")
+# #+END_SRC
 
-** Aesthetic / display options
-#+BEGIN_SRC emacs-lisp
-  ;; Use fancy chars
-  (setq mu4e-use-fancy-chars t)
+# ** Aesthetic / display options
+# #+BEGIN_SRC emacs-lisp
+#   ;; Use fancy chars
+#   (setq mu4e-use-fancy-chars t)
 
-  ;; Try to display images in mu4e
-  (setq
-   mu4e-view-show-images t
-   mu4e-view-image-max-width 800)
+#   ;; Try to display images in mu4e
+#   (setq
+#    mu4e-view-show-images t
+#    mu4e-view-image-max-width 800)
 
-  ;; Date format
-  (setq mu4e-headers-date-format "%d/%b/%Y %H:%M") 
+#   ;; Date format
+#   (setq mu4e-headers-date-format "%d/%b/%Y %H:%M") 
 
-  ;; Quitting mu4e
-  (setq message-kill-buffer-on-exit t
-        mu4e-confirm-quit nil)
+#   ;; Quitting mu4e
+#   (setq message-kill-buffer-on-exit t
+#         mu4e-confirm-quit nil)
 
-  ;; Don't show duplicate messages in searches
-  (setq mu4e-headers-skip-duplicates t)
-#+END_SRC
+#   ;; Don't show duplicate messages in searches
+#   (setq mu4e-headers-skip-duplicates t)
+# #+END_SRC
 
-** HTML mail handler
-#+BEGIN_SRC emacs-lisp
-  ;; Convert rich (HTML) mail to text---tried a lot of converters. Pandoc, FTW.
-  (setq mu4e-html2text-command "pandoc -f html -t plain")
-#+END_SRC
+# ** HTML mail handler
+# #+BEGIN_SRC emacs-lisp
+#   ;; Convert rich (HTML) mail to text---tried a lot of converters. Pandoc, FTW.
+#   (setq mu4e-html2text-command "pandoc -f html -t plain")
+# #+END_SRC
 
 
-** Configure mail composition and sending
+# ** Configure mail composition and sending
 
-#+BEGIN_SRC emacs-lisp
-  ;; sending mail
-  (setq message-send-mail-function 'message-send-mail-with-sendmail
-        sendmail-program "/usr/local/bin/msmtp"
-        user-full-name "Peter Schmiedeskamp")
+# #+BEGIN_SRC emacs-lisp
+#   ;; sending mail
+#   (setq message-send-mail-function 'message-send-mail-with-sendmail
+#         sendmail-program "/usr/local/bin/msmtp"
+#         user-full-name "Peter Schmiedeskamp")
 
-  ;; Borrowed from http://ionrock.org/emacs-email-and-mu.html
-  ;; Choose account label to feed msmtp -a option based on From header
-  ;; in Message buffer; This function must be added to
-  ;; message-send-mail-hook for on-the-fly change of From address before
-  ;; sending message since message-send-mail-hook is processed right
-  ;; before sending message.
-  (defun choose-msmtp-account ()
-    (if (message-mail-p)
-        (save-excursion
-          (let*
-              ((from (save-restriction
-                       (message-narrow-to-headers)
-                       (message-fetch-field "from")))
-               (account
-                (cond
-                 ((string-match "peter@thoughtspot.net" from) "Thoughtspot")
-                 ((string-match "pschmied@uw.edu" from) "UW")
-                 ((string-match "pschmied@u.washington.edu" from) "UW"))))
-            (setq message-sendmail-extra-arguments (list '"-a" account))))))
-  (setq message-sendmail-envelope-from 'header)
-  (add-hook 'message-send-mail-hook 'choose-msmtp-account)
-  (add-to-list 'mu4e-bookmarks
-               '("maildir:/Thoughtspot/inbox OR maildir:/UW/inbox flag:unread" "Today's news" ?z))
+#   ;; Borrowed from http://ionrock.org/emacs-email-and-mu.html
+#   ;; Choose account label to feed msmtp -a option based on From header
+#   ;; in Message buffer; This function must be added to
+#   ;; message-send-mail-hook for on-the-fly change of From address before
+#   ;; sending message since message-send-mail-hook is processed right
+#   ;; before sending message.
+#   (defun choose-msmtp-account ()
+#     (if (message-mail-p)
+#         (save-excursion
+#           (let*
+#               ((from (save-restriction
+#                        (message-narrow-to-headers)
+#                        (message-fetch-field "from")))
+#                (account
+#                 (cond
+#                  ((string-match "peter@thoughtspot.net" from) "Thoughtspot")
+#                  ((string-match "pschmied@uw.edu" from) "UW")
+#                  ((string-match "pschmied@u.washington.edu" from) "UW"))))
+#             (setq message-sendmail-extra-arguments (list '"-a" account))))))
+#   (setq message-sendmail-envelope-from 'header)
+#   (add-hook 'message-send-mail-hook 'choose-msmtp-account)
+#   (add-to-list 'mu4e-bookmarks
+#                '("maildir:/Thoughtspot/inbox OR maildir:/UW/inbox flag:unread" "Today's news" ?z))
 
-  ;; Reply to mail using the account that original message was sent to
-  (add-hook 'mu4e-compose-pre-hook
-            (defun my-set-from-address ()
-              "Set the From address based on the To address of the original."
-              (let ((msg mu4e-compose-parent-message)) ;; msg is shorter...
-                (if msg
-                    (setq user-mail-address
-                          (cond
-                           ((mu4e-message-contact-field-matches msg :to "peter@thoughtspot.net")
-                            "peter@thoughtspot.net")
-                           ((mu4e-message-contact-field-matches msg :to "pschmied@uw.edu")
-                            "pschmied@uw.edu")
-                           ((mu4e-message-contact-field-matches msg :to "pschmied@u.washington.edu")
-                            "pschmied@uw.edu")
-                           ((mu4e-message-contact-field-matches msg :cc "peter@thoughtspot.net")
-                            "peter@thoughtspot.net")
-                           ((mu4e-message-contact-field-matches msg :cc "pschmied@uw.edu")
-                            "pschmied@uw.edu")
-                           ((mu4e-message-contact-field-matches msg :cc "pschmied@u.washington.edu")
-                            "pschmied@uw.edu")
-                           (t "peter@thoughtspot.net")))))))
+#   ;; Reply to mail using the account that original message was sent to
+#   (add-hook 'mu4e-compose-pre-hook
+#             (defun my-set-from-address ()
+#               "Set the From address based on the To address of the original."
+#               (let ((msg mu4e-compose-parent-message)) ;; msg is shorter...
+#                 (if msg
+#                     (setq user-mail-address
+#                           (cond
+#                            ((mu4e-message-contact-field-matches msg :to "peter@thoughtspot.net")
+#                             "peter@thoughtspot.net")
+#                            ((mu4e-message-contact-field-matches msg :to "pschmied@uw.edu")
+#                             "pschmied@uw.edu")
+#                            ((mu4e-message-contact-field-matches msg :to "pschmied@u.washington.edu")
+#                             "pschmied@uw.edu")
+#                            ((mu4e-message-contact-field-matches msg :cc "peter@thoughtspot.net")
+#                             "peter@thoughtspot.net")
+#                            ((mu4e-message-contact-field-matches msg :cc "pschmied@uw.edu")
+#                             "pschmied@uw.edu")
+#                            ((mu4e-message-contact-field-matches msg :cc "pschmied@u.washington.edu")
+#                             "pschmied@uw.edu")
+#                            (t "peter@thoughtspot.net")))))))
 
-  ;; Turn on flyspell mode when typing
-  (add-hook 'mu4e-compose-mode-hook
-     (defun my-do-compose-stuff ()
-        "My settings for message composition."
-        (flyspell-mode)))
-#+END_SRC
+#   ;; Turn on flyspell mode when typing
+#   (add-hook 'mu4e-compose-mode-hook
+#      (defun my-do-compose-stuff ()
+#         "My settings for message composition."
+#         (flyspell-mode)))
+# #+END_SRC
